# colbert-rag

./: .gitignore  README.md  mypy.ini  pyproject.toml  wikipedia.ipynb
.github/workflows/: python-package.yml
colbert_rag/: __init__.py  config.py  models.py
colbert_rag/data/: git_repo.py
colbert_rag/indexer/: base.py  git_repo.py
colbert_rag/proto/: __init__.py  colbertrag_pb2_grpc.py  wrapper.py
colbert_rag/server/: base.py  fastapi.py  grpc.py
examples/: analyzer.py  client.py  indexer.ipynb  test_repo.ipynb  wikipedia.py
proto/: colbertrag.proto
scripts/: generate.py  index.py  server.py  type_check.py
src/: analyzer.py  client.py  colbertrag_pb2.py  colbertrag_pb2.pyi  fastapi_server.py  gitrepo.py  grpc_server.py  indexer.ipynb  indexer.py  preprocessors.py  server.py  wikipedia.py
