[tool.poetry]
name = "colbert-rag"
version = "0.1.0"
description = "RAG using Langchain and RAGatouille"
authors = ["ricardo-larosa <ricardo@larosa.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
RAGatouille = "^0.0.8.post2"
# langchain = "^0.2."
# langchain-community = "^0.2.10"
# langchain-openai = "^0.1.19"
# langchainhub = "^0.1.20"
langchain-openai = "0.1.7"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
