[tool.poetry]
name = "colbert-rag"
version = "0.1.0"
description = "RAG using Langchain and RAGatouille"
authors = ["ricardo-larosa <ricardo@larosa.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
RAGatouille = "^0.0.8.post2"
langchain-openai = "0.1.7"
python-dotenv = "^1.0.1"
grpcio-tools = "^1.65.1"
gitpython = "^3.1.43"
faiss-gpu = "^1.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
