[tool.poetry]
name = "colbert-rag"
version = "0.1.2"
description = "RAG using Langchain and RAGatouille"
authors = ["ricardo-larosa <ricardo@larosa.dev>"]
packages = [{ include = "colbert_rag" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
RAGatouille = "^0.0.8.post2"
langchain-openai = "0.1.7"
python-dotenv = "^1.0.1"
grpcio-tools = "^1.65.1"
gitpython = "^3.1.43"
pygments = "^2.18.0"
fastapi = "^0.112.0"
uvicorn = "^0.30.6"

[tool.poetry.group.cpu]
optional = true

[tool.poetry.group.cpu.dependencies]
faiss-cpu = "^1.7.2"

[tool.poetry.group.gpu]
optional = true

[tool.poetry.group.gpu.dependencies]
faiss-gpu = "^1.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ipykernel = "^6.29.5"
mypy-protobuf = "^3.6.0"

mypy = "^1.11.1"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
server = "scripts.server:run"
create-index = "scripts.index:create"
generate-protos = "scripts.generate:protos"
type-check = "scripts.type_check:run_mypy"
